--- a/Data/clean.Rmd
+++ b/Data/clean.Rmd
@@ -50,6 +50,97 @@ clean_results <- results %>%
                                      TRUE ~ NA_real_)) %>%
      mutate(Q21_6 = case_when(Q21_6 == "Support" ~ 1,
                                      Q21_6 == "Oppose" ~ 0,
+                                     TRUE ~ NA_real_)) %>%
+ mutate(Q25 = case_when(Q25 == "0 hours" ~ 0,
+                                     Q25 == "Less than 30 minutes" ~ 30,
+                                     Q25 == "30-60 minutes" ~ 60,
+                                     Q25 == "1-2 hours" ~ 120,
+                                     Q25 == "More than 2 hours" ~ 150,
+                                     TRUE ~ NA_real_)) %>%
+   mutate(Q26 = case_when(Q26 == "No familiarity" ~ 1,
+                                     Q26 == "Low familiarity with the news" ~ 2,
+                                     Q26 == "Average familiarity with the news" ~ 3,
+                                     Q26 == "High familiarity with the news" ~ 4,
+                                     Q26 == "Complete familiarity with the news" ~ 5,
+                                     TRUE ~ NA_real_)) %>%
+   mutate(Q27 = case_when(Q27 == "Never" ~ 1,
+                                     Q27 == "Sometimes" ~ 2,
+                                     Q27 == "About half the time" ~ 3,
+                                     Q27 == "Most of the time" ~ 4,
+                                     Q27 == "Always" ~ 5,
+                                     TRUE ~ NA_real_)) %>%
+    mutate(Q28 = case_when(Q28 == "Totally disagree" ~ 1,
+                                     Q28 == "Somewhat disagree" ~ 2,
+                                     Q28 == "Neither agree nor disagree" ~ 3,
+                                     Q28 == "Somewhat agree" ~ 4,
+                                     Q28 == "Totally agree" ~ 5,
+                                     TRUE ~ NA_real_)) %>%
+      mutate(Q44 = case_when(Q44 == "Not at all" ~ 1,
+                                     Q44 == "Not very well" ~ 2,
+                                     Q44 == "Somewhat well" ~ 3,
+                                     Q44 == "Very well" ~ 4,
+                                     Q44 == "Extremely well" ~ 5,
+                                     TRUE ~ NA_real_)) %>%
+        mutate(Q34 = case_when(Q34 == "Not sure" ~ 0,
+                                     Q34 == "More likely to support China" ~ -1,
+                                     Q34 == "More likely to support the U.S." ~ 1,
+                                     TRUE ~ NA_real_)) %>%
+          mutate(Q42 = case_when(Q42 == "Not sure" ~ 0,
+                                     Q42 == "More likely to support China" ~ -1,
+                                     Q42 == "More likely to support the U.S." ~ 1,
+                                     TRUE ~ NA_real_)) %>%
+            mutate(Q35 = case_when(Q35 == "Yes" ~ -1,
+                                     Q35 == "No" ~ 1,
+                                     Q35 == "Not sure" ~ 0,
+                                     TRUE ~ NA_real_)) %>%
+              mutate(Education = case_when(Education == "Some high school" ~ 0,
+                                     Education == "Less than high school degree" ~ 0,
+                                     Education == "High school graduate" ~ 4,
+                                     Education == "High school graduate (high school diploma or equivalent including GED)" ~ 4,
+                                     Education == "B.A. or B.S." ~ 10,
+                                     Education == "Bachelor's degree in college (4-year)" ~ 10,
+                                     Education == "Associate's Degree" ~ 7,
+                                     Education == "Associate degree in college (2-year)" ~ 7,
+                                     Education == "Master's" ~ 12,
+                                     Education == "Master's degree" ~ 12,
+                                     Education == "Ph.D." ~ 17,
+                                     Education == "M.D." ~ 17,
+                                     Education == "Doctoral degree" ~ 17,
+                                     TRUE ~ NA_real_)) %>%
+                mutate(Gender = case_when(Gender == "Male" ~ "Male",
+                                     Gender == "Female" ~ "Female",
+                                     Gender == "Other" ~ "Other",
+                                     TRUE ~ NA_character_)) %>%
+                  mutate(Party = case_when(Party == "Republican" ~ "Republican",
+                                     Party == "Democrat" ~ "Democrat",
+                                     Party == "Other" ~ "Independent",
+                                     Party == "Independent" ~ "Independent",
+                                     TRUE ~ NA_character_)) %>%
+                    mutate(Salary = case_when(Salary == "$90,000-$99,999" ~ 99999,
+                                     Salary == "$35,000-$39,999" ~ 39999,
+                                     Salary == "$22,000-$24,999" ~ 24999,
+                                     Salary == "$75,000-$89,999" ~ 89999,
+                                     Salary == "$45,000-$49,999" ~ 49999,
+                                     Salary == "$60,000-$74,999" ~ 74999,
+                                     Salary == "$135,000-$149,999" ~ 149999,
+                                     Salary == "$50,000-$59,999" ~ 59999,
+                                     Salary == "$100,000-$109,999" ~ 109999,
+                                     Salary == "$15,000-$16,999" ~ 16999,
+                                     Salary == "$60,000-$74,999" ~ 74999,
+                                     Salary == "$30,000-$34,999" ~ 34999,
+                                     Salary == "$17,000-$19,999" ~ 19999,
+                                     Salary == "$120,000-$134,999" ~ 134999,
+                                     Salary == "$110,000-$119,999" ~ 119999,
+                                     Salary == "$150,000 and over" ~ 200000,
+                                      Salary == "$40,000-$44,999" ~ 44999,
+                                     Salary == "None or less than $2,999" ~ 2999,
+                                     Salary == "$5,000 -$7,499" ~ 7499,
+                                     Salary == "$100,000 to $149,999" ~ 149999,
+                                     Salary == "$150,000 or more" ~ 200000,
+                                     Salary == "$10,000 to $49,999" ~ 49999,
+                                     Salary == "$50,000 to $74,999" ~ 74999,
+                                     Salary == "Less than $10,000" ~ 10000,
+                                     Salary == "$75,000 to $99,999" ~ 99999,
                                      TRUE ~ NA_real_))
 ```
 
